# HeaderTool

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
Private/: ClangParser.cpp  ClangParser.h  CmdParser.cpp  CmdParser.h  Common.h  HeaderTool.cpp  RTTRGenerator.cpp  RTTRGenerator.h  ReflectionEnums.h  Timestamp.cpp  Timestamp.h  Utility.cpp  Utility.h
Private/windows/: HeaderTool.rc  resource.h
